--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -6,5 +6,11 @@
     "content": "conteúdo",
     "total posts": "total de posts",
     "published posts": "posts publicados",
-    "draft posts": "posts rascunho"
+    "draft posts": "posts rascunho",
+    "setting": "configuração",
+    "settings": "configurações",
+    "value": "valor",
+    "application name": "nome da aplicação",
+    "menu type": "tipo de menu",
+    "primary color": "cor primária"
 }
