melhora listagem e configuracoes

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -12,5 +12,6 @@
     "value": "valor",
     "application name": "nome da aplicação",
     "menu type": "tipo de menu",
-    "primary color": "cor primária"
+    "primary color": "cor primária",
+    "draft": "rascunho"
 }
