--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -4,6 +4,9 @@
     "description": "descrição",
     "published": "publicado",
     "content": "conteúdo",
+    "total pages": "total de páginas",
+    "published pages": "páginas publicados",
+    "draft pages": "páginas rascunho",
     "total posts": "total de posts",
     "published posts": "posts publicados",
     "draft posts": "posts rascunho",
