add page repeater

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -28,5 +28,6 @@
     "text": "texto",
     "boolean": "booleano",
     "file": "arquivo",
-    "image": "imagem"
+    "image": "imagem",
+    "repeater": "repetidor"
 }
