MELHORA PARAMETROS E CMS

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -29,5 +29,6 @@
     "boolean": "booleano",
     "file": "arquivo",
     "image": "imagem",
-    "repeater": "repetidor"
+    "repeater": "repetidor",
+    "admin route": "rota de administração"
 }
