--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -33,5 +33,7 @@
     "repeater": "repetidor",
     "admin route": "rota de administração",
     "yes": "sim",
-    "no": "não"
+    "no": "não",
+    "infos": "informações",
+    "new this week": "novos esta semana"
 }
