--- a/resources/views/lang/pt_BR.json
+++ b/resources/views/lang/pt_BR.json
@@ -5,5 +5,6 @@
     "contact": "contato",
     "our team": "nosso time",
     "subscribe": "inscreva-se",
-    "enter your email here": "digite seu email aqui"
+    "enter your email here": "digite seu email aqui",
+    "all rights reserved": "todos os direitos reservados"
 }
