--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -38,5 +38,8 @@
     "new this week": "novos esta semana",
     "language": "idioma",
     "code": "código",
-    "flag": "bandeira"
+    "parameters": "parâmetros",
+    "flag": "bandeira",
+    "page attribute": "atributo da página",
+    "page attributes": "atributos da página"
 }
