--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -41,5 +41,6 @@
     "parameters": "parâmetros",
     "flag": "bandeira",
     "page attribute": "atributo da página",
-    "page attributes": "atributos da página"
+    "page attributes": "atributos da página",
+    "export": "exportar"
 }
